--- a/src/kaleidoscope.scss
+++ b/src/kaleidoscope.scss
@@ -100,12 +100,12 @@ $dynamic-border-width: max(8vw, 8vh);
 
 @keyframes pills-before {
   50% {
-    transform: rotate(12deg);
+    transform: translateZ(0) rotate(12deg);
   }
 }
 @keyframes pills-after {
   50% {
-    transform: rotate(-98deg);
+    transform: translateZ(0) rotate(-98deg);
   }
 }
 
@@ -117,9 +117,10 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 120%;
     border-color: $primary-medium;
     border-radius: 50%;
-    transform: rotate(-6deg);
+    transform: translateZ(0) rotate(-6deg);
     transform-origin: 100% 50%;
     animation: pills-before 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 
   &:after {
@@ -129,19 +130,20 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 50%;
     border-color: $primary-medium;
     border-radius: 50%;
-    transform: rotate(-40deg);
+    transform: translateZ(0) rotate(-40deg);
     animation: pills-after 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 }
 
 @keyframes squares-before {
   50% {
-    transform: rotate(180deg);
+    transform: translateZ(0) rotate(180deg);
   }
 }
 @keyframes squares-after {
   50% {
-    transform: rotate(-225deg);
+    transform: translateZ(0) rotate(-225deg);
   }
 }
 
@@ -152,7 +154,9 @@ $dynamic-border-width: max(8vw, 8vh);
     width: 65%;
     height: 65%;
     border-color: $secondary-medium;
+    transform: translateZ(0);
     animation: squares-before 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 
   &:after {
@@ -161,19 +165,20 @@ $dynamic-border-width: max(8vw, 8vh);
     width: 65%;
     height: 65%;
     border-color: $secondary-medium;
-    transform: rotate(-45deg);
+    transform: translateZ(0) rotate(-45deg);
     animation: squares-after 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 }
 
 @keyframes petals-before {
   50% {
-    transform: rotate(50deg);
+    transform: translateZ(0) rotate(50deg);
   }
 }
 @keyframes petals-after {
   50% {
-    transform: rotate(-52deg);
+    transform: translateZ(0) rotate(-52deg);
   }
 }
 
@@ -185,8 +190,9 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 75%;
     border-color: $primary-bright;
     border-radius: 50% 0;
-    transform: rotate(-20deg);
+    transform: translateZ(0) rotate(-20deg);
     animation: petals-before 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 
   &:after {
@@ -196,7 +202,9 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 55%;
     border-color: $primary-bright;
     border-radius: 50%;
+    transform: translateZ(0);
     transform-origin: 25% 100%;
     animation: petals-after 30s ease-in-out 0s infinite alternate;
+    will-change: transform;
   }
 }
