--- a/src/kaleidoscope.scss
+++ b/src/kaleidoscope.scss
@@ -119,8 +119,9 @@ $dynamic-border-width: max(8vw, 8vh);
     border-radius: 50%;
     transform: translateZ(0) rotate(-6deg);
     transform-origin: 100% 50%;
-    animation: pills-before 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: pills-before 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 
   &:after {
@@ -131,8 +132,9 @@ $dynamic-border-width: max(8vw, 8vh);
     border-color: $primary-medium;
     border-radius: 50%;
     transform: translateZ(0) rotate(-40deg);
-    animation: pills-after 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: pills-after 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 }
 
@@ -155,8 +157,9 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 65%;
     border-color: $secondary-medium;
     transform: translateZ(0);
-    animation: squares-before 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: squares-before 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 
   &:after {
@@ -166,8 +169,9 @@ $dynamic-border-width: max(8vw, 8vh);
     height: 65%;
     border-color: $secondary-medium;
     transform: translateZ(0) rotate(-45deg);
-    animation: squares-after 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: squares-after 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 }
 
@@ -191,8 +195,9 @@ $dynamic-border-width: max(8vw, 8vh);
     border-color: $primary-bright;
     border-radius: 50% 0;
     transform: translateZ(0) rotate(-20deg);
-    animation: petals-before 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: petals-before 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 
   &:after {
@@ -204,7 +209,8 @@ $dynamic-border-width: max(8vw, 8vh);
     border-radius: 50%;
     transform: translateZ(0);
     transform-origin: 25% 100%;
-    animation: petals-after 30s ease-in-out 0s infinite alternate;
-    will-change: transform;
+
+    // animation: petals-after 30s ease-in-out 0s infinite alternate;
+    // will-change: transform;
   }
 }
