--- a/src/app.scss
+++ b/src/app.scss
@@ -16,7 +16,7 @@
 }
 
 html {
-  background: #000;
+  overflow-x: hidden;
   font-size: 100%;
   font-size: clamp(100%, min(4vw, 5vh), 200%);
   font-synthesis: none;
@@ -27,9 +27,9 @@ html {
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   margin: 0;
-  color: #fff;
   font-weight: 400;
   font-family:
     'DM Serif Display',
@@ -42,10 +42,6 @@ body {
   text-align: center;
 }
 
-#app {
-  min-height: 100vh;
-}
-
 main {
   position: relative;
   display: flex;
@@ -54,6 +50,7 @@ main {
   align-items: center;
   min-height: 100vh;
   padding: 2rem 0;
+  color: #fff;
 }
 
 .background__container {
@@ -74,6 +71,7 @@ main {
 
 h1 {
   margin: 0;
+  padding-bottom: 0.0625rem;
   font-weight: 400;
   font-size: 3rem;
   line-height: 3rem;
@@ -127,37 +125,29 @@ h1 {
 }
 
 .button {
-  display: inline-block;
-  vertical-align: top;
-  margin: 1rem 0;
-  padding: 1px 0.625rem;
-  border: 1px solid #fff;
-  border-radius: 0;
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  margin-left: -1rem;
+  padding: 0.125rem;
+  border: 2px solid #fff;
+  border-radius: 50%;
   background: $primary-darker;
   color: #fff;
-  box-shadow: 0 2px 1px $primary-darker;
-  font-size: 1.25rem;
-  font-family: inherit;
-  line-height: 1.5rem;
-  text-decoration: none;
+  box-shadow:
+    0 1px 1px $primary-darker,
+    0 2px 1px $primary-darker;
   cursor: pointer;
 
   &:hover, &:active {
-    background: #fff;
-    color: $primary-darker;
-  }
-
-  &:active {
-    padding-top: 2px;
-    padding-bottom: 0;
+    background: $secondary-darker;
   }
 
   svg {
-    display: inline-block;
-    vertical-align: top;
-    width: 1rem;
-    height: 1rem;
-    margin: 0.25rem 0.25rem 0.25rem -0.125rem;
+    display: block;
     fill: currentColor;
   }
 }
